[package]
name = "_connvert"
version = "0.1.0"
edition = "2021"

[package.metadata.maturin]
name = "connvert._connvert"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_connvert"
crate-type = ["cdylib"]


[dependencies]
pyo3 = "0.18.1"
